{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "7df1be1c-51c7-4d2f-8869-0a01233eaa7d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b8d85c0e-d526-4f96-a5b3-d5fdf44f91de",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HandAtack",
                    "type": "Button",
                    "id": "ff1ff4ab-c04f-4d5b-a309-6336c59686a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FootAtack",
                    "type": "Button",
                    "id": "275a6486-dbd2-4dcb-8d24-8cb098f882d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c397c4ef-b08a-4bf1-848f-5b1587adcca3",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandAtack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9d676df-e49c-48ab-be41-5fca83f37d44",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FootAtack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "0e6f12ce-a650-4431-80f7-35da9b191413",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "619ba090-a096-4b05-8add-f01927508ec2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ad85ae0d-ace4-471e-9e92-6c0af52ef4f0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "51baf895-bf0d-4b11-9e1e-33a83cc8359a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4f274c9f-0486-4670-8ac5-a4b14390a93d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}